fix h3 spacing

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -27,6 +27,12 @@ body {
   margin: 1.5rem 0;
 }
 
+.post-content h3 {
+  font-size: 1.2rem;
+  font-family: sans-serif;
+  margin: 1rem 0;
+}
+
 .post-content a {
   color: rgb(73, 149, 199);
   text-decoration: none;
